# Puruda

./: .gitignore  Cargo.toml  README.md  test.csv  test.nc
col_macro/: Cargo.toml
col_macro/src/: lib.rs
examples/: csv_test.rs  json_test.rs  nc_test.rs  test_col.rs
puruda_macro/: Cargo.toml  README.md
puruda_macro/src/: lib.rs
src/: lib.rs
tests/: test_basic.rs  test_display.rs  test_io.rs  test_numeric.rs  test_row_ops.rs  test_slicing.rs  test_sort_transform.rs
