[package]
name = "puruda"
version = "0.1.0"
authors = ["Axect <axect@outlook.kr>"]
description = "Pure Rust DataFrame"
edition = "2018"
repository = "https://github.com/Axect/Puruda"
license = "BSD-3-Clause"
categories = ["data structures"]
readme = "README.md"
keywords = ["Dataframe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
col-macro = { version = "0.1", path = "col_macro" }
csv = { version = "1.1", optional = true }

[dev-dependencies]
peroxide = { version = "0.21", features = ["dataframe"] }

[features]
default = ["csv"]
