[package]
name = "puruda"
version = "0.1.0"
authors = ["Axect <axect@outlook.kr>"]
description = "Pure Rust DataFrame"
edition = "2018"
repository = "https://github.com/Axect/Puruda"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
readme = "README.md"
keywords = ["Dataframe", "CSV"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puruda-macro = { version = "0.1", path = "puruda_macro" }
csv = "1.1"
netcdf = { version = "0.5", optional = true, default_features = false }

[dev-dependencies]
peroxide = { version = "0.26", features = ["dataframe"] }

[features]
default = []
nc = ["netcdf"]
