[package]
name = "puruda-macro"
version = "0.2.0"
authors = ["Axect <axect@outlook.kr>"]
description = "proc macro for puruda"
edition = "2018"
repository = "https://github.com/Axect/Puruda"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
readme = "README.md"
keywords = ["Dataframe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = "1"
